data/derived/comb/progs/unify/prog7326.ml.out
Characters 86-87:
  | [0]  -> removeZero [t]
                        ^
Error: This expression has type int list list
       but an expression was expected of type int list
       Type int list is not compatible with type int 
